# ImprobotProject

./: README.md  Video_Links.md
ImprovSurvey/: app.py  requirements.txt
ImprovSurvey/static/: styles.css
ImprovSurvey/templates/: evaluation.html  homepage.html  instructions.html  thanks.html
ROS Workspace/ReactionModule/: chiroli_start1.sh  chiroli_start2.sh  chiroli_start3.sh  chiroli_start4.sh  readme.md
ROS Workspace/ScenicActionRecognition/: README.md  requirements.txt  setup_camera.sh  start_r1.sh  start_r2.sh  test_fuzzy.ipynb
ROS Workspace/ScenicActionRecognition/foxy/src/impro_msgs/: CMakeLists.txt  package.xml
ROS Workspace/ScenicActionRecognition/foxy/src/impro_msgs/msg/: ProxemicMovement.msg
ROS Workspace/maps/: How to map.md  arena.pgm  arena.yaml  arena_Mod.pgm
ReactionsSurvey/: MongoDBCredentials.txt  app.py
ReactionsSurvey/templates/: base.html  evaluation.html  homepage.html  instructions.html  thanks.html
RobocchioRL/: README.md  data_preparation.ipynb  summary.csv
RobocchioRL/Notebooks/: Double_Q_learning.ipynb  Double_Q_learning_TD.ipynb  Double_Q_learning_TD_hp_tuning.ipynb  Expected_SARSA.ipynb  Q_learning.ipynb  Q_learning_hp_tuning.ipynb  SARSA_baseline.ipynb  SARSA_le.ipynb
RobocchioRL/scenes/: video1_scenes.json  video3_scenes.json  video4_scenes.json
VideoLabeling/reward_labelling/: Answers_05_05_2023.json  Answers_09_05_2023.json  impro1_labelled.json  impro2_labelled.json  impro3_labelled.json  impro4_labelled.json  reward_labelling.ipynb  video1_scenes.json  video2_scenes.json
VideoLabeling/time_labelling/: impro1_labels.json  improvisation1.json  improvisation2.json  improvisation3.json  improvisation4.json  labeling_script.py  labels.json  (+1 more)
(+193 files in other folders)
